--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
   "name": "Quartz",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "authors": [
     "Michael Hamilton <michaelhamilton626@gmail.com>"
   ],
-  "description": "Frontend web framework",
+  "description": "Boilerplate, responsive front-end web framework",
   "keywords": [
     "CSS",
     "Javascript",
-    "Jquery"
+    "Sass",
+    "Responsive"
   ],
   "license": "MIT",
   "homepage": "https://github.com/michael-hamilton",
@@ -20,6 +21,5 @@
     "tests"
   ],
   "dependencies": {
-    "skeleton": "~2.0.4"
   }
 }
