Update package name
update the package name in package.json to avoid conflicts on npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quartz",
+  "name": "quartz-framework",
   "version": "0.1.0",
   "description": "Boilerplate, responsive front-end development framework ",
   "main": "",
