--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "Quartz",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "authors": [
     "Michael Hamilton <michaelhamilton626@gmail.com>"
   ],
@@ -20,6 +20,5 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-  }
+  "dependencies": {}
 }
